--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@
 :root {
   --bs-primary-rgb: 231, 228, 255;
   --bs-primary: #7659B7;
-  --bs-btn-bg: #7659B7;
-  --bs-blue: #0061FB;
+  --bs-secondary-rgb: 2, 169, 227;
+  --bs-blue-rgb: 0, 97, 251;
 }
 
 :root {
@@ -68,6 +68,11 @@ header {
     justify-content: center;
     flex-direction: column;
     text-align: center;
+}
+
+.footer {
+  color: var(--bs-blue);
+  background-color: #E7E4FF;
 }
 
 .hero-text {
